Pagina de apps terminada

--- a/Inicio.html
+++ b/Inicio.html
@@ -88,7 +88,7 @@
                     <a href="Pages/Login.html">Cerrar sesión</a>
                 </div>
             </div>
-            <img src="Img/logo.jpg" alt="">
+            <img src="Img/RetroPandalog.jpg" alt="">
             <div class="info-usuario">
                 <div class="nombre-email">
                     <span class="nombre">RetroPanda</span>
@@ -112,11 +112,11 @@
                     <img src="img/prueba1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/417190173_784204767060420_2401931861820323669_n (1).jpg" class="d-block w-100"
+                    <img src="img/Intro2prueba.png" class="d-block w-100"
                         alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/423582858_801302258684004_4894357644361042916_n.png" class="d-block w-100" alt="...">
+                    <img src="Img/prueba1.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
