--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -22,8 +22,8 @@
     <div>
       <div class="nombre-pagina">
         <div class="usuario">
-          <img src="../Img/logo.jpg" alt="">
-          <span>La Cazuela</span>
+          <img src="../Img/RetroPandalog.jpg" alt="">
+          <span>RetroPanda</span>
         </div>
       </div>
       <a href="../Inicio.html#platito">
@@ -45,7 +45,7 @@
         <li>
           <a id="inbox" href="Menu.html">
             <ion-icon name="restaurant-outline"></ion-icon>
-            <span>Menú</span>
+            <span>Apps</span>
           </a>
         </li>
         <li>
@@ -78,10 +78,10 @@
         </div>
       </div>
       <div class="usuario">
-        <img src="../Img/logo.jpg" alt="">
+        <img src="../Img/RetroPandalog.jpg" alt="">
         <div class="info-usuario">
           <div class="nombre-email">
-            <span class="nombre">Daniel Brizuela</span>
+            <span class="nombre">Daniel Steven</span>
             <span class="email">20230196@gmail.com</span>
           </div>
         </div>
@@ -96,16 +96,17 @@
         <div class="row">
           <div class="col">
             <div class="tarjeta-rest text-center"
-              style="background: url(../Img/Platos_fuertes.jpg) center; background-size: cover;">
+              style="background: url(../Img/imagenZapatos1.jpg) center; background-size: cover;">
               <div class="wrap-text_tarjeta-rest">
-                <h3>Platos Fuertes</h3>
-                <p>Para poder llenarte tienes que comer un buen plato fuerte, no importa el tiempo
-                  de comida aqui puedes encontrar los mejores platos de comida de todo en pais, 
-                  te aseguramosn que te llenaras
+                <h3>Nuestra App</h3>
+                <p>Con RetroPanda, no solo estás comprando zapatos, estás invirtiendo en una experiencia única 
+                  que combina lo mejor del pasado con la libertad de la personalización. Te ofrecemos una inversion en 
+                  los zapatos de tu preferencia con el diseño que tu decidas.
+
                 </p>
                 <div class="cta-wrap_tarjeta-rest">
                   <div class="precio_tarjeta-rest">
-                    <span>5$ - 20$</span>
+                    <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
                     <a href="PlatosFuertes.html">Ver mas</a>
@@ -116,16 +117,16 @@
           </div>
           <div class="col">
             <div class="tarjeta-rest text-center"
-              style="background: url(../Img/entradas1.jpg) center; background-size: cover;">
+              style="background: url(../Img/imgZapatos2.jpg) center; background-size: cover;">
               <div class="wrap-text_tarjeta-rest">
-                <h3>Entradas</h3>
-                <p>Si quieres comenzar bien antes de llenarte te recomendamos unas
-                  ricas entradas. Hey pero un secreto estan hechas con mucho amor,
-                  mientras te llevan tu plato fuerte puedes tener unas ricas entradas.
+                <h3>El Mercado</h3>
+                <p>Se elaboran spots publicitarios en redes sociales y cadenas de televisión y radio para alcanzar al mayor número de público posible, 
+                  estos anuncios siempre, en caso de los visuales,
+                   mantendrán la temática retro para tener una identidad y diferencia del resto de anuncios publicitarios acerca de zapatillas
                 </p>
                 <div class="cta-wrap_tarjeta-rest">
                   <div class="precio_tarjeta-rest">
-                    <span>2$ - 10$</span>
+                    <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
                     <a href="Entradas.html">Ver mas</a>
@@ -139,16 +140,15 @@
         <div class="row">
           <div class="col">
             <div class="tarjeta-rest text-center"
-              style="background: url(../Img/antojitos.jpg) center; background-size: cover;">
+              style="background: url(../Img/imgZapatos3.jpg) center; background-size: cover;">
               <div class="wrap-text_tarjeta-rest">
-                <h3>Antojitos</h3>
-                <p>Para que no te quedes con las ganas te ofrecemos unos ricos antojitos tipicos.
-                  Son elaborados por las mejores manos Salvadoreñas para que tu paladar disfrute la 
-                  mejor experiencia 
+                <h3>Marketing</h3>
+                <p>Se espera poder abarcar en el mercado actual de creación de sistemas de ventas y administración en redes sociales en tiendas de ropa,
+                   música y zapatos, osea poder contar con 10 clientes en toda el área urbana de San salvador
                 </p>
                 <div class="cta-wrap_tarjeta-rest">
                   <div class="precio_tarjeta-rest">
-                    <span>5$</span>
+                    <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
                     <a href="antojitos.html">Ver mas</a>
@@ -159,16 +159,16 @@
           </div>
           <div class="col">
             <div class="tarjeta-rest text-center"
-              style="background: url(../Img/Postres.png) center; background-size: cover;">
+              style="background: url(../Img/imgZap4.jpg) center; background-size: cover;">
               <div class="wrap-text_tarjeta-rest">
-                <h3>Postres</h3>
-                <p>Para endulzarte el paladar depues de comer bien te recomendamos
-                  unos ricos postres, tantos tipicos o nieves. Para endulzarte la vida
-                  te recomendamos probarlos.
+                <h3>Plan de Ventas</h3>
+                <p>Aumentar los ingresos y la participación de mercado de la tienda de zapatillas 
+                  retro mediante la implementación efectiva de un sistema de subastas y personalización.
+
                 </p>
                 <div class="cta-wrap_tarjeta-rest">
                   <div class="precio_tarjeta-rest">
-                    <span>5$ - 10$</span>
+                    <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
                     <a href="postres.html">Ver mas</a>
