--- a/Pages/Reseñas.html
+++ b/Pages/Reseñas.html
@@ -8,7 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>Reseñas</title>
 
-<link rel="icon" type="image/x-icon" href="../Img/logo.jpg">
+<link rel="icon" type="image/x-icon" href="../Img/RetroPandalog.jpg">
 <link rel="stylesheet" href="../Css/barra.css">
 <link rel="stylesheet" href="../Css/Reseñas.css">
 
@@ -24,8 +24,8 @@
         <div>
             <div class="nombre-pagina">
                 <div class="usuario">
-                    <img src="../Img/logo.jpg" alt="">
-                    <span>La Cazuela</span>
+                    <img src="../Img/RetroPandalog.jpg" alt="">
+                    <span>RetroPanda</span>
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                 <li>
                     <a href="Menu.html">
                         <ion-icon name="restaurant-outline"></ion-icon>
-                        <span>Menú</span>
+                        <span>Apps</span>
                     </a>
                 </li>
                 <li>
@@ -82,10 +82,10 @@
                 </div>
             </div>
         <div class="usuario">
-            <img src="../Img/logo.jpg" alt="">
+            <img src="../Img/RetroPandalog.jpg" alt="">
             <div class="info-usuario">
                 <div class="nombre-email">
-                    <span class="nombre">Jorge Orantes</span>
+                    <span class="nombre">Marcos Torres</span>
                     <span class="email">20200054@ricaldone.edu.sv</span>
                 </div>
             </div>
