--- a/Pages/SobreNosotros.html
+++ b/Pages/SobreNosotros.html
@@ -25,8 +25,8 @@
         <div>
             <div class="nombre-pagina">
                 <div class="usuario">
-                    <img src="../Img/logo.jpg" alt="">
-                    <span>La Cazuela</span>
+                    <img src="../Img/RetroPandalog.jpg" alt="">
+                    <span>RetroPanda</span>
                 </div>
             </div>
             <a href="../Inicio.html#platito">
@@ -48,7 +48,7 @@
                 <li>
                     <a href="Menu.html">
                         <ion-icon name="restaurant-outline"></ion-icon>
-                        <span>Menú</span>
+                        <span>Apps</span>
                     </a>
                 </li>
                 <li>
@@ -81,10 +81,10 @@
                 </div>
             </div>
             <div class="usuario">
-                <img src="../Img/logo.jpg" alt="">
+                <img src="../Img/RetroPandalog.jpg" alt="">
                 <div class="info-usuario">
                     <div class="nombre-email">
-                        <span class="nombre">Rodrigo Hurtado</span>
+                        <span class="nombre">Steven Ejemplo</span>
                         <span class="email">20220224@gmail.com</span>
                     </div>
                 </div>
