--- a/Pages/Reservas.html
+++ b/Pages/Reservas.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Reservas</title>
-    <link rel="icon" type="image/x-icon" href="../Img/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="../Img/RetroPandalog.jpg">
     <link rel="stylesheet" href="../Css/barra.css">
     <link rel="stylesheet" href="../Css/Reservas.css">
 </head>
@@ -22,14 +22,14 @@
         <div>
             <div class="nombre-pagina">
                 <div class="usuario">
-                    <img src="../Img/logo.jpg" alt="">
-                    <span>La Cazuela</span>
+                    <img src="../Img/RetroPandalog.jpg" alt="">
+                    <span>RetroPanda</span>
                 </div>
             </div>
             <a href="../Inicio.html#platito">
                 <button class="boton">
                     <ion-icon name="disc-outline"></ion-icon>
-                    <span>Plato del día</span>
+                    <span>RetroSex</span>
                 </button>
             </a>
         </div>
@@ -45,7 +45,7 @@
                 <li>
                     <a href="Menu.html">
                         <ion-icon name="restaurant-outline"></ion-icon>
-                        <span>Menú</span>
+                        <span>Apps</span>
                     </a>
                 </li>
                 <li>
@@ -78,11 +78,11 @@
                 </div>
             </div>
         <div class="usuario">
-            <img src="../Img/logo.jpg" alt="">
+            <img src="../Img/RetroPandalog.jpg" alt="">
             <div class="info-usuario">
                 <div class="nombre-email">
-                    <span class="nombre">Fer Huezo</span>
-                    <span class="email">20230501@gmail.com</span>
+                    <span class="nombre">Angel</span>
+                    <span class="email">20200501@gmail.com</span>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
     </div>
     <main>
         <section class="banner">
-            <h2>RESERVA TU PLATILLO</h2>
+            <h2>RESERVA TUS ZAPATOS</h2>
             <div class="container-img">
                 <img id="imgs">
             </div>
