--- a/Pages/SobreNosotros.html
+++ b/Pages/SobreNosotros.html
@@ -10,7 +10,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <title>Sobre Nosotros</title>
-    <link rel="icon" type="image/x-icon" href="../Img/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="../Img/RetroPandalog.jpg">
     <link rel="stylesheet" href="../Css/barra.css">
     <link rel="stylesheet" href="../Css/Sobrenosotros.css">
 </head>
@@ -32,7 +32,7 @@
             <a href="../Inicio.html#platito">
                 <button class="boton">
                     <ion-icon name="disc-outline"></ion-icon>
-                    <span>Plato del día</span>
+                    <span>RetroPandax</span>
                 </button>
             </a>
         </div>
@@ -138,24 +138,20 @@
                 <div class="col">
                     <div class="mision">
                         <h2>Misión</h2>
-                        <p>En "La Cazuela", nuestra misión es ofrecer a nuestros clientes una experiencia culinaria
-                            excepcional
-                            al proporcionar platillos auténticos, preparados con ingredientes frescos y de la más alta
-                            calidad.
-                            Nos comprometemos a mantener viva la tradición culinaria, ofreciendo un ambiente acogedor y
-                            un
-                            servicio excepcional que exceda las expectativas de nuestros comensales.</p>
+                        <p>Nuestra misión es crear una aplicación que explore y amplíe el mundo de la venta de las zapatillas “retro”
+                            que nos brinde una gran variedad de personalización y diferentes modelos de tenis muy demandados por el mercado,
+                            dando una nueva innovacion en el mundo y poder lograr una nueva forma de marketing en este mundo, 
+                            todo esto se lograra mediante herramientas de desarrollo de Software.</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="vision">
                         <h2>Visión</h2>
-                        <p>Nuestra visión en "La Cazuela" es convertirnos en el restaurante de referencia en la región,
-                            reconocido por nuestra cocina excepcional, atención al detalle y ambiente cálido. Nos
-                            esforzamos por
-                            ser un destino culinario preferido tanto para los lugareños como para los visitantes,
-                            creando una
-                            experiencia gastronómica inolvidable que invite a nuestros clientes a volver una y otra vez.
+                        <p>Esperamos convertirnos en un referente en el mundo de las zapatillas, 
+                            donde las personas que les guste este mundo puedan venir y 
+                            buscar las zapatillas de su preferencia
+                             y para clientes más casuales, ofrecer uno de los mejores servicios de personalización de zapatillas.
+
                         </p>
                     </div>
                 </div>
