--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Menú</title>
-  <link rel="icon" type="image/x-icon" href="../Img/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="../Img/RetroPandalog.jpg">
   <link rel="stylesheet" href="../Css/barra.css">
   <link rel="stylesheet" href="../Css/menu.css">
 </head>
@@ -29,7 +29,7 @@
       <a href="../Inicio.html#platito">
         <button class="boton">
           <ion-icon name="disc-outline"></ion-icon>
-          <span>Plato del día</span>
+          <span>RetroPandax</span>
         </button>
       </a>
     </div>
