--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -16,13 +16,13 @@
     <div id="menuContenedor"></div>
     <br>
     <div class="container py-5">
-        <img src="../img/Banner Curso Sobre Programación Moderno Azul (3).png" class="banner">
+        <img src="../img/Inicio de sesion 3.png" class="banner">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6 col-xl-4">
                 <div class="card" style="border-radius: 15px;">
                     <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light"
                         data-mdb-ripple-color="light">
-                        <img src="../img/300259389_436781628476734_2238772207808967895_n.jpg"
+                        <img src="../img/RetroPandalog.jpg"
                             style="border-top-left-radius: 15px; border-top-right-radius: 15px;" class="img-fluid"
                             alt="Licencia de Software" />
                         <a href="#!">
