--- a/Pages/SobreNosotros.html
+++ b/Pages/SobreNosotros.html
@@ -94,7 +94,7 @@
     </div>
     <main>
         <div class="container text-center">
-            <img src="../Img/plato blanco (1).png" alt="">
+            <img src="../Img/Nosotros2.png" alt="">
         </div>
         <div id="cosablanca" class="container text-center justify-content-center align-items-center">
             <div class="container text-center">
