--- a/Pages/Apps.html
+++ b/Pages/Apps.html
@@ -109,7 +109,7 @@
                     <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
-                    <a href="PlatosFuertes.html">Ver mas</a>
+                    <a href=""></a>
                   </div>
                 </div>
               </div>
@@ -129,7 +129,7 @@
                     <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
-                    <a href="Entradas.html">Ver mas</a>
+                    <a href=""></a>
                   </div>
                 </div>
               </div>
@@ -151,7 +151,7 @@
                     <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
-                    <a href="antojitos.html">Ver mas</a>
+                    <a href=""></a>
                   </div>
                 </div>
               </div>
@@ -171,7 +171,7 @@
                     <span>ℜ𝔢𝔱𝔯𝔬𝔖𝔢𝔵</span>
                   </div>
                   <div class="cta_tarjeta-rest">
-                    <a href="postres.html">Ver mas</a>
+                    <a href=""></a>
                   </div>
                 </div>
               </div>
