--- a/Pages/Reseñas.html
+++ b/Pages/Reseñas.html
@@ -32,7 +32,7 @@
             <a href="../Inicio.html#platito">
                 <button class="boton">
                     <ion-icon name="disc-outline"></ion-icon>
-                    <span>Plato del día</span>
+                    <span>RetroPandax</span>
                 </button>
             </a>
 
