--- a/Inicio.html
+++ b/Inicio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>La Cazuela</title>
+    <title>RetroPandax</title>
     <link rel="icon" type="image/x-icon" href="Img/RetroPandalog.jpg">
     <link rel="stylesheet" href="Css/barra.css">
     <link rel="stylesheet" href="Css/Inicio.css">
@@ -43,8 +43,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Pages/Menu.html">
-                        <ion-icon name="restaurant-outline"></ion-icon>
+                    <a href="Pages/Apps.html">
+                        <ion-icon name="logo-apple-ar"></ion-icon>
                         <span>Apps</span>
                     </a>
                 </li>
@@ -109,10 +109,10 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/prueba1.png" class="d-block w-100" alt="...">
+                    <img src="img/PagPrin1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Intro2prueba.png" class="d-block w-100"
+                    <img src="img/PagPrinc2.png" class="d-block w-100"
                         alt="...">
                 </div>
                 <div class="carousel-item">
@@ -146,15 +146,15 @@
                             <div class="container text-start">
                                 <div class="row">
                                     <div class="columnatext col-6">
-                                        <h2 class="texto1" id="Djobi"></h2>
+                                        <h2 class="texto1" id="Djobi">Dale una oportunidad a RetroPanda</h2>
                                         <hr>
                                         <br>
                                         <!--<div class="container text-start">-->
-                                        <p class="texto22" id="Djoba"></p>
+                                        <p class="texto22" id="Djoba">Entendemos que tus zapatos no son solo accesorios, son una expresión única de tu personalidad y estilo. Nos enorgullece ofrecer una experiencia exclusiva en el mundo de los zapatos retro, combinando la nostalgia de los diseños clásicos con la moderna ventaja de la personalización</p>
                                     </div>
                                     <div class="cosaamarilla col-6 pt-4 pb-4">
                                         <div class="text-center">
-                                            <img id="Djobe">
+                                            <img src="Img/Interfaces.png" alt="">
                                         </div>
                                     </div>
                                 </div>
