--- a/Pages/Reseñas.html
+++ b/Pages/Reseñas.html
@@ -47,8 +47,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Menu.html">
-                        <ion-icon name="restaurant-outline"></ion-icon>
+                    <a href="Apps.html">
+                        <ion-icon name="logo-apple-ar"></ion-icon>
                         <span>Apps</span>
                     </a>
                 </li>
