--- a/Pages/SobreNosotros.html
+++ b/Pages/SobreNosotros.html
@@ -46,8 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Menu.html">
-                        <ion-icon name="restaurant-outline"></ion-icon>
+                    <a href="Apps.html">
+                        <ion-icon name="logo-apple-ar"></ion-icon>
                         <span>Apps</span>
                     </a>
                 </li>
@@ -119,7 +119,7 @@
                                     </div>
                                     <div class="cosaamarilla col-6 pt-4 pb-4 d-flex justify-content-center">
                                         <div class="text-center">
-                                            <img src="../Img/restaurant.png" class="imagen">
+                                            <img src="../Img/nosotros.png" class="imagen">
                                         </div>
                                     </div>
                                 </div>
