--- a/Pages/Apps.html
+++ b/Pages/Apps.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Menú</title>
+  <title></title>
   <link rel="icon" type="image/x-icon" href="../Img/RetroPandalog.jpg">
   <link rel="stylesheet" href="../Css/barra.css">
-  <link rel="stylesheet" href="../Css/menu.css">
+  <link rel="stylesheet" href="../Css/Apps.css">
 </head>
 
 <body>
@@ -43,9 +43,9 @@
           </a>
         </li>
         <li>
-          <a id="inbox" href="Menu.html">
-            <ion-icon name="restaurant-outline"></ion-icon>
-            <span>Apps</span>
+          <a id="inbox" href="Apps.html">
+            <ion-icon name="logo-apple-ar"></ion-icon>
+                        <span>Apps</span>
           </a>
         </li>
         <li>
