--- a/Pages/Reservas.html
+++ b/Pages/Reservas.html
@@ -43,8 +43,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Menu.html">
-                        <ion-icon name="restaurant-outline"></ion-icon>
+                    <a href="Apps.html">
+                        <ion-icon name="logo-apple-ar"></ion-icon>
                         <span>Apps</span>
                     </a>
                 </li>
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="form-row">
-                        <input type="submit" id="enviarReserva" class="form-control" value="RESERVAR PLATO" onclick="agregarUsuario()">
+                        <input type="submit" id="enviarReserva" class="form-control" value="RESERVAR TUS ZAPATOS" onclick="agregarUsuario()">
                     </div>
 
                 </form>
